# Dogg-web-api

./: .gitignore  Cargo.toml  dogg-web-api.service  leaderboard.http
.sqlx/: query-bc25c9cc09006119bf4c40afa8d31fb8d91b049864f621d91cd4ec8427e10308.json
db/migrations/: 20260426194702_create_leaderboard.sql
src/: main.rs
