[package]
name = "Dogg-web-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["http2", "json", "tokio", "tracing", "macros"] }
tower = "0.5.3"
tokio = { version = "1.52.1", features = ["full"] }
serde = {version = "1.0.228"}
serde_json = "1.0.149"
chrono = {version = "0.4.44", features = ["serde"]}
sqlx = { version = "0.9.0-alpha.1", features = ["sqlite", "runtime-tokio", "migrate", "macros", "uuid", "chrono"] }
uuid = {version = "1.23.1", features = ["v7", "serde"]}
validator = {version = "0.20.0", features = ["derive"]}

dotenvy = "0.15"